# kmanga_mobi

./: .gitattributes  .gitignore  .travis.yml  README.md  pyproject.toml  test_kmanga_mobi.py  test_mobicache.py
fixtures/cache/: mobi1.mobi  mobi2.1.mobi  mobi2.2.mobi  mobi3.mobi
kmanga_mobi/: mobi.py
