[tool.poetry]
name = "kmanga_mobi"
version = "0.1.0"
description = "mobi package extracted from kmanga"
license = "GPL-3.0"
repository = "https://github.com/whtsky/kmanga_mobi"
keywords = ["mobi"]
authors = ["Alberto Planas <aplanas@gmail.com>", "Wu Haotian <whtsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pillow = "^6.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2.2"
pytest-cov = "^2.8.1"
lxml = "^4.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
